tests/tldk/error/error-tldk-test-error27.pkt
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0.2 accept(3, ..., ...) = 4
+0.1 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:50001(50000) ack 1 win 27510
+0 ~ +1  > . 1:1(0) ack 50001 <...>

+0 < . 301:401(100) ack 1 win 27510
+0  > . 1:1(0) ack 50001 <...>
+0.1 read(4, ..., 20) = 20

+0 < . 401:501(100) ack 1 win 27510
+0 > . 1:1(0) ack 50001 <...>
+0.1 read(4, ..., 20) = 20

+0 < . 501:601(100) ack 1 win 27510
+0  > . 1:1(0) ack 50001 <...>
+0.1 read(4, ..., 20) = 20

+0 < . 50001:70001(20000) ack 1 win 27510
+0  > . 1:1(0) ack 70001 <...>
+0.1 read(4, ..., 100000) = 69940
+0.1 read(4, ..., 100000) = -1
+0 < . 50001:60001(10000) ack 1 win 27510
+0  > . 1:1(0) ack 70001 <...>
+0.1 read(4, ..., 100000) = -1
+0 close(4) = 0
+0  > R. 1:1(0) ack 70001 <...>
